Added chunk coordinate forking support.